<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_add_new_product"
        android:title="@string/menu_add_product_shopping_list"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_save_shoppinglist"
        android:title="@string/menu_save_shopping_list"
        android:icon="@drawable/ic_save_white_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_delete_shoppingList"
        android:title="@string/menu_delete_shopping_list"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_clear_shopping_cart"
        android:title="@string/menu_clear_shopping_cart"
        app:showAsAction="never"/>
</menu>