<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/listitem_overview_product_view"
    android:background="?android:attr/selectableItemBackground"
    android:paddingStart="@dimen/listitem_padding_left"
    android:paddingBottom="@dimen/listitem_padding_bottom"
    android:paddingEnd="@dimen/listitem_padding_right"
    android:paddingTop="@dimen/listitem_padding_top">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon_holder_layout"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="@dimen/label_bottom_margin_product_overview">

        <ImageView
            android:id="@+id/listitem_overview_product_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:maxHeight="50dp"
            android:maxWidth="50dp"
            android:src="@mipmap/ic_launcher_round"/>

        <TextView
            android:id="@+id/tv_product_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="A"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/icon_holder_layout"
        android:id="@+id/layout_holder_name"
        android:layout_marginBottom="@dimen/label_bottom_margin_product_overview">

        <TextView
            android:id="@+id/tv_label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/label_name"
            android:maxLines="1"
            android:textSize="@dimen/text_size_primary"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:id="@+id/tv_overview_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="@dimen/text_size_primary"
            android:textColor="@android:color/black"
            android:ellipsize="marquee"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/tv_label_name" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_holder_name"
        android:layout_toEndOf="@+id/icon_holder_layout"
        android:id="@+id/layout_holder_seller"
        android:layout_marginBottom="@dimen/label_bottom_margin_product_overview">

        <TextView
            android:id="@+id/tv_label_seller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_seller"
            android:textSize="@dimen/text_size_primary"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:id="@+id/tv_overview_product_seller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="@dimen/text_size_primary"
            android:textColor="@android:color/black"
            android:ellipsize="marquee"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/tv_label_seller" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_holder_seller"
        android:layout_toEndOf="@+id/icon_holder_layout"
        android:id="@+id/layout_holder_price"
        android:layout_marginBottom="@dimen/label_bottom_margin_product_overview">

        <TextView
            android:id="@+id/tv_label_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/label_price"
            android:textSize="@dimen/text_size_primary"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:id="@+id/tv_overview_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="@dimen/text_size_primary"
            android:textColor="@android:color/black"
            android:ellipsize="marquee"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/tv_label_price" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_holder_price"
        android:id="@+id/layout_holder_description">

        <TextView
            android:id="@+id/tv_label_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_description"
            android:textSize="@dimen/text_size_primary"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/tv_overview_product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_primary"
            android:textColor="@android:color/black"
            android:ellipsize="marquee"
            android:maxLines="3"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_label_description"/>
    </RelativeLayout>

</RelativeLayout>